# hidapi

./: CMakeLists.txt
testgui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
